test/testdata/variables/undeclared_access_error.lox
// warning: a has not been declared
// error: a has not been declared
print a + 1;
